sumo/tests/sumo/spec/flow/errors/period_per_hour/errors.sumo
Error: Exactly one of 'period', 'vehsPerHour', and 'no' have to be given in the definition of flow 'f1'.
Quitting (on error).
